# spectra

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  package-lock.json  package.json  spectra.example.jsonc  tsconfig.json
assets/: spectra-icon.icns  update-public-key.pem
desktop-native/: Cargo.toml  README.md  packager.json
desktop-native/src/: main.rs
docs/: ADAPTIVE_DESKTOP.md  CORE_ARCHITECTURE.md  DESKTOP_IDE.md  INSTALLATION.md  MULTIAGENT_ISOLATION.md  PRODUCTION_1_0.md  RELEASING.md
scripts/: fake-llm.mjs  performance-budget.mjs  run-tests.mjs  security-audit.mjs  smoke-e2e.mjs  stress.mjs
src/: cli.ts  commands.ts  index.ts  runtime.ts
src/tui/: app.ts  (+11 more)
test/: _probe.test.ts  adaptation-ecosystem.test.ts  adaptation-integration-source.test.ts  adaptation-models.test.ts  adaptation-profile.test.ts  apply-patch.test.ts  approval-gate.test.ts  auth.test.ts  autochange-integration.test.ts  autorun.test.ts  bash-timeout.test.ts  browser.test.ts  bugfix.test.ts  bugfix2.test.ts  catalog.test.ts  claude-compat.test.ts  cli-extras.test.ts  commands.test.ts  compaction.test.ts  config.test.ts  core-desktop-integration.test.ts  core-lease.test.ts  core-protocol.test.ts  core-state-store.test.ts  core-supervisor.test.ts  cost.test.ts  custom-provider.test.ts  desktop-ide.test.ts  desktop-shell.test.ts  eval.test.ts  free-models.test.ts  freebuff.test.ts  git.test.ts  glob.test.ts  go-theme.test.ts  headroom.test.ts  hook-trust.test.ts  hooks-fire.test.ts  ide-api-source.test.ts  ide-service.test.ts  (+57 more)
(+194 files in other folders)
