[package]
name = "spectra-desktop"
version = "0.1.0"
edition = "2021"
description = "Native, lightweight desktop window for Spectra (system WebView)."
license = "MIT"

[[bin]]
name = "spectra-desktop"
path = "src/main.rs"

[dependencies]
wry = "0.45"
tao = "0.30"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
